--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -1,6 +1,12 @@
 agents:
   queue: sprites
 steps:
-  - label: ":fly-io: Test Fly Builds"
+  - label: ":go: :test_tube: Tests"
     command: .buildkite/scripts/tests.sh
     parallelism: 3
+    secrets:
+          BUILDKITE_ANALYTICS_TOKEN: SPRITES_SUITE_TOKEN
+    plugins:
+      - test-collector#v1.11.0
+          files: "*/*.xml"
+          format: "junit"
